# AI_mail_relay_app

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  QUICKSTART_SERVER.md  README.md  TROUBLESHOOTING.md  mark_unread.py  pyproject.toml  requirements.txt  show_summary.py  test.py  test_fields.py  test_limited.py  test_no_papers.py  test_single_paper.py
data/: ai_mail_relay.db
deploy/: README.md  deploy.sh  diagnose.sh  health_check.sh  run.sh  setup_cron.sh  verify_api_mode.sh
docs/: DEPLOY.md  DEVELOPMENT_PLAN.md  README.md  analysis-development-plan.md  configuration.md  troubleshooting.md
reports/: report-2025-12-10.md
src/ai_mail_relay/: __init__.py  arxiv_fetcher.py  arxiv_parser.py  config.py  llm_client.py  llm_providers.py  mail_fetcher.py  mail_sender.py  main.py  pipeline.py
src/ai_mail_relay/analysis/: __init__.py  clustering.py  embeddings.py  report_generator.py  trends.py
src/ai_mail_relay/api/: __init__.py  schemas.py
src/ai_mail_relay/cli/: __init__.py  analyze_commands.py  user_commands.py
src/ai_mail_relay/database/: __init__.py  connection.py  migrations.py
src/ai_mail_relay/repositories/: __init__.py  cluster_repository.py  embedding_repository.py  paper_repository.py  subscription_repository.py  user_repository.py
src/ai_mail_relay/services/: __init__.py  analysis_service.py  delivery_service.py  paper_service.py  user_service.py
